// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories: (categorizeByGroup=false) should render category TOC' 1`] = `
"## Index

### CategoryA

- [CategoryInterfaceA1](exports.md#categoryinterfacea1)
- [CategoryInterfaceA2](exports.md#categoryinterfacea2)
- [categoryVariableA1](exports.md#categoryvariablea1)
- [categoryVariableA2](exports.md#categoryvariablea2)
- [categoryFunctionA1](exports.md#categoryfunctiona1)
- [categoryFunctionA2](exports.md#categoryfunctiona2)
- [categoryFunctionA3](exports.md#categoryfunctiona3)

### CategoryB

- [categoryVariableB1](exports.md#categoryvariableb1)
- [categoryFunctionB2](exports.md#categoryfunctionb2)

### Other

- [OtherInterfaceA](exports.md#otherinterfacea)
- [otherVariableA](exports.md#othervariablea)
- [otherVariableB](exports.md#othervariableb)
- [otherFunctionA](exports.md#otherfunctiona)
- [otherFunctionB](exports.md#otherfunctionb)
"
`;

exports[`Categories: (categorizeByGroup=false) should render category members' 1`] = `
"## CategoryA

### CategoryInterfaceA1

[partial: reflectionMember]



---

### CategoryInterfaceA2

[partial: reflectionMember]



---

### categoryVariableA1

[partial: declarationMember]



---

### categoryVariableA2

[partial: declarationMember]



---

### categoryFunctionA1()

[partial: signatureMember]



---

### categoryFunctionA2()

[partial: signatureMember]



---

### categoryFunctionA3()

[partial: signatureMember]



---

## CategoryB

### categoryVariableB1

[partial: declarationMember]



---

### categoryFunctionB2()

[partial: signatureMember]



---

## Other

### OtherInterfaceA

[partial: reflectionMember]



---

### otherVariableA

[partial: declarationMember]



---

### otherVariableB

[partial: declarationMember]



---

### otherFunctionA()

[partial: signatureMember]



---

### otherFunctionB()

[partial: signatureMember]



---"
`;

exports[`Categories: (excludeGroups=false) should render category TOC' 1`] = `
"## Index

### Interfaces

#### CategoryA

- [CategoryInterfaceA1](exports.md#categoryinterfacea1)
- [CategoryInterfaceA2](exports.md#categoryinterfacea2)
- [OtherInterfaceA](exports.md#otherinterfacea)

#### Other

- [CategoryInterfaceA1](exports.md#categoryinterfacea1)
- [CategoryInterfaceA2](exports.md#categoryinterfacea2)
- [OtherInterfaceA](exports.md#otherinterfacea)

### Variables

#### CategoryA

- [categoryVariableA1](exports.md#categoryvariablea1)
- [categoryVariableA2](exports.md#categoryvariablea2)
- [categoryVariableB1](exports.md#categoryvariableb1)
- [otherVariableA](exports.md#othervariablea)
- [otherVariableB](exports.md#othervariableb)

#### CategoryB

- [categoryVariableA1](exports.md#categoryvariablea1)
- [categoryVariableA2](exports.md#categoryvariablea2)
- [categoryVariableB1](exports.md#categoryvariableb1)
- [otherVariableA](exports.md#othervariablea)
- [otherVariableB](exports.md#othervariableb)

#### Other

- [categoryVariableA1](exports.md#categoryvariablea1)
- [categoryVariableA2](exports.md#categoryvariablea2)
- [categoryVariableB1](exports.md#categoryvariableb1)
- [otherVariableA](exports.md#othervariablea)
- [otherVariableB](exports.md#othervariableb)

### Functions

#### CategoryA

- [categoryFunctionA1](exports.md#categoryfunctiona1)
- [categoryFunctionA2](exports.md#categoryfunctiona2)
- [categoryFunctionA3](exports.md#categoryfunctiona3)
- [categoryFunctionB2](exports.md#categoryfunctionb2)
- [otherFunctionA](exports.md#otherfunctiona)
- [otherFunctionB](exports.md#otherfunctionb)

#### CategoryB

- [categoryFunctionA1](exports.md#categoryfunctiona1)
- [categoryFunctionA2](exports.md#categoryfunctiona2)
- [categoryFunctionA3](exports.md#categoryfunctiona3)
- [categoryFunctionB2](exports.md#categoryfunctionb2)
- [otherFunctionA](exports.md#otherfunctiona)
- [otherFunctionB](exports.md#otherfunctionb)

#### Other

- [categoryFunctionA1](exports.md#categoryfunctiona1)
- [categoryFunctionA2](exports.md#categoryfunctiona2)
- [categoryFunctionA3](exports.md#categoryfunctiona3)
- [categoryFunctionB2](exports.md#categoryfunctionb2)
- [otherFunctionA](exports.md#otherfunctiona)
- [otherFunctionB](exports.md#otherfunctionb)
"
`;

exports[`Categories: (excludeGroups=false) should render category members' 1`] = `
"## Interfaces

### CategoryA

#### CategoryInterfaceA1

[partial: reflectionMember]



---

#### CategoryInterfaceA2

[partial: reflectionMember]



---

### Other

#### OtherInterfaceA

[partial: reflectionMember]



---

## Variables

### CategoryA

#### categoryVariableA1

[partial: declarationMember]



---

#### categoryVariableA2

[partial: declarationMember]



---

### CategoryB

#### categoryVariableB1

[partial: declarationMember]



---

### Other

#### otherVariableA

[partial: declarationMember]



---

#### otherVariableB

[partial: declarationMember]



---

## Functions

### CategoryA

#### categoryFunctionA1()

[partial: signatureMember]



---

#### categoryFunctionA2()

[partial: signatureMember]



---

#### categoryFunctionA3()

[partial: signatureMember]



---

### CategoryB

#### categoryFunctionB2()

[partial: signatureMember]



---

### Other

#### otherFunctionA()

[partial: signatureMember]



---

#### otherFunctionB()

[partial: signatureMember]



---"
`;

exports[`Categories: (excludeGroups=true) should render category TOC' 1`] = `
"## Index

### CategoryA

- [CategoryInterfaceA1](exports.md#categoryinterfacea1)
- [CategoryInterfaceA2](exports.md#categoryinterfacea2)
- [categoryVariableA1](exports.md#categoryvariablea1)
- [categoryVariableA2](exports.md#categoryvariablea2)
- [categoryFunctionA1](exports.md#categoryfunctiona1)
- [categoryFunctionA2](exports.md#categoryfunctiona2)
- [categoryFunctionA3](exports.md#categoryfunctiona3)

### CategoryB

- [categoryVariableB1](exports.md#categoryvariableb1)
- [categoryFunctionB2](exports.md#categoryfunctionb2)

### Other

- [OtherInterfaceA](exports.md#otherinterfacea)
- [otherVariableA](exports.md#othervariablea)
- [otherVariableB](exports.md#othervariableb)
- [otherFunctionA](exports.md#otherfunctiona)
- [otherFunctionB](exports.md#otherfunctionb)
"
`;

exports[`Categories: (excludeGroups=true) should render category members' 1`] = `
"## CategoryA

### CategoryInterfaceA1

[partial: reflectionMember]



---

### CategoryInterfaceA2

[partial: reflectionMember]



---

### categoryVariableA1

[partial: declarationMember]



---

### categoryVariableA2

[partial: declarationMember]



---

### categoryFunctionA1()

[partial: signatureMember]



---

### categoryFunctionA2()

[partial: signatureMember]



---

### categoryFunctionA3()

[partial: signatureMember]



---

## CategoryB

### categoryVariableB1

[partial: declarationMember]



---

### categoryFunctionB2()

[partial: signatureMember]



---

## Other

### OtherInterfaceA

[partial: reflectionMember]



---

### otherVariableA

[partial: declarationMember]



---

### otherVariableB

[partial: declarationMember]



---

### otherFunctionA()

[partial: signatureMember]



---

### otherFunctionB()

[partial: signatureMember]



---"
`;
